--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.1",
     "next": "13.0.1",
+    "nuka-carousel": "^5.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
